syntax = "proto3";

package user_service;

option go_package = "./proto";

service UserService {
        rpc CreateAdminUser(CreateAdminUserRequest) returns (CreateAdminUserResponse);
}

message CreateAdminUserRequest {
        string username = 1;
        string email = 2;
        string bio = 3;
        string organizationId = 4;
}

message CreateAdminUserResponse {
        int32 statusCode = 1;
        string message = 2;
}
